src/parser/parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from parser.y
-----------------------------------------------------------------------------

state 108 contains 1 shift/reduce conflicts.
state 198 contains 1 shift/reduce conflicts.
state 204 contains 1 shift/reduce conflicts.

terminal '++' is unused
terminal '--' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Char -> L_charac                                   (2)
	Integer -> L_integ                                 (3)
	Double -> L_doubl                                  (4)
	String -> L_quoted                                 (5)
	Program -> ListDecl                                (6)
	Decl -> 'proc' Ident '(' ListForm ')' Intent ':' Type Block   (7)
	Decl -> 'var' ListVDecl ';'                        (8)
	Decl -> 'param' ListCDecl ';'                      (9)
	Form -> Intent Ident ':' Type                      (10)
	Intent ->                                          (11)
	Intent -> 'in'                                     (12)
	Intent -> 'out'                                    (13)
	Intent -> 'inout'                                  (14)
	Intent -> 'ref'                                    (15)
	Intent -> 'const' 'in'                             (16)
	Intent -> 'const' 'ref'                            (17)
	VDecl -> Ident ':' Type                            (18)
	VDecl -> Ident ':' Type '=' RExp                   (19)
	CDecl -> Ident ':' Type '=' RExp                   (20)
	Type -> Compound Basic                             (21)
	Compound ->                                        (22)
	Compound -> Compound '[' RExp ']'                  (23)
	Compound -> Compound '*'                           (24)
	Basic -> 'bool'                                    (25)
	Basic -> 'char'                                    (26)
	Basic -> 'int'                                     (27)
	Basic -> 'real'                                    (28)
	Basic -> 'string'                                  (29)
	Basic -> 'void'                                    (30)
	Block -> '{' '}'                                   (31)
	Block -> '{' ListDecl '}'                          (32)
	Block -> '{' ListStm '}'                           (33)
	Block -> '{' ListDecl ListStm '}'                  (34)
	Stm -> ';' Stm                                     (35)
	Stm -> Block                                       (36)
	Stm -> Ident '(' ListRExp ')' ';'                  (37)
	Stm -> PWrite '(' RExp ')' ';'                     (38)
	Stm -> LExp '=' RExp ';'                           (39)
	Stm -> LExp '+=' RExp ';'                          (40)
	Stm -> LExp '-=' RExp ';'                          (41)
	Stm -> LExp '*=' RExp ';'                          (42)
	Stm -> LExp '/=' RExp ';'                          (43)
	Stm -> LExp '%=' RExp ';'                          (44)
	Stm -> LExp '^=' RExp ';'                          (45)
	Stm -> LExp ';'                                    (46)
	Stm -> 'if' RExp 'then' Stm                        (47)
	Stm -> 'if' RExp Block                             (48)
	Stm -> 'if' RExp 'then' Stm 'else' Stm             (49)
	Stm -> 'if' RExp Block 'else' Stm                  (50)
	Stm -> 'while' RExp 'do' Stm                       (51)
	Stm -> 'while' RExp Block                          (52)
	Stm -> 'do' Stm 'while' RExp ';'                   (53)
	Stm -> 'for' Ident 'in' Range 'do' Stm             (54)
	Stm -> 'for' Ident 'in' Range Block                (55)
	Stm -> 'return' ';'                                (56)
	Stm -> 'return' RExp ';'                           (57)
	Stm -> 'break' ';'                                 (58)
	Stm -> 'continue' ';'                              (59)
	Range -> '{' RExp '..' RExp '}'                    (60)
	LExp -> '*' LExp                                   (61)
	LExp -> LExp '[' RExp ']'                          (62)
	LExp -> Ident                                      (63)
	LExp -> '(' LExp ')'                               (64)
	RExp -> RExp '||' RExp                             (65)
	RExp -> RExp '&&' RExp                             (66)
	RExp -> '!' RExp                                   (67)
	RExp -> RExp '<' RExp                              (68)
	RExp -> RExp '<=' RExp                             (69)
	RExp -> RExp '==' RExp                             (70)
	RExp -> RExp '!=' RExp                             (71)
	RExp -> RExp '>=' RExp                             (72)
	RExp -> RExp '>' RExp                              (73)
	RExp -> RExp '+' RExp                              (74)
	RExp -> RExp '-' RExp                              (75)
	RExp -> RExp '*' RExp                              (76)
	RExp -> RExp '/' RExp                              (77)
	RExp -> RExp '%' RExp                              (78)
	RExp -> RExp '^' RExp                              (79)
	RExp -> '+' RExp                                   (80)
	RExp -> '-' RExp                                   (81)
	RExp -> '&' LExp                                   (82)
	RExp -> LExp                                       (83)
	RExp -> '[' ListRExp ']'                           (84)
	RExp -> Ident '(' ListRExp ')'                     (85)
	RExp -> PRead '(' ')'                              (86)
	RExp -> Literal                                    (87)
	RExp -> '(' RExp ')'                               (88)
	PRead -> 'readChar'                                (89)
	PRead -> 'readInt'                                 (90)
	PRead -> 'readFloat'                               (91)
	PRead -> 'readString'                              (92)
	PWrite -> 'writeChar'                              (93)
	PWrite -> 'writeInt'                               (94)
	PWrite -> 'writeFloat'                             (95)
	PWrite -> 'writeString'                            (96)
	Literal -> 'false'                                 (97)
	Literal -> 'true'                                  (98)
	Literal -> Char                                    (99)
	Literal -> Integer                                 (100)
	Literal -> Double                                  (101)
	Literal -> String                                  (102)
	ListForm ->                                        (103)
	ListForm -> Form                                   (104)
	ListForm -> Form ',' ListForm                      (105)
	ListDecl -> Decl                                   (106)
	ListDecl -> Decl ListDecl                          (107)
	ListVDecl -> VDecl                                 (108)
	ListVDecl -> VDecl ',' ListVDecl                   (109)
	ListCDecl -> CDecl                                 (110)
	ListCDecl -> CDecl ',' ListCDecl                   (111)
	ListStm -> Stm                                     (112)
	ListStm -> Stm ListStm                             (113)
	ListRExp ->                                        (114)
	ListRExp -> RExp                                   (115)
	ListRExp -> RExp ',' ListRExp                      (116)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'%='           { PT _ (TS _ 4) }
	'&'            { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'*='           { PT _ (TS _ 10) }
	'+'            { PT _ (TS _ 11) }
	'++'           { PT _ (TS _ 12) }
	'+='           { PT _ (TS _ 13) }
	','            { PT _ (TS _ 14) }
	'-'            { PT _ (TS _ 15) }
	'--'           { PT _ (TS _ 16) }
	'-='           { PT _ (TS _ 17) }
	'..'           { PT _ (TS _ 18) }
	'/'            { PT _ (TS _ 19) }
	'/='           { PT _ (TS _ 20) }
	':'            { PT _ (TS _ 21) }
	';'            { PT _ (TS _ 22) }
	'<'            { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'['            { PT _ (TS _ 29) }
	']'            { PT _ (TS _ 30) }
	'^'            { PT _ (TS _ 31) }
	'^='           { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'break'        { PT _ (TS _ 34) }
	'char'         { PT _ (TS _ 35) }
	'const'        { PT _ (TS _ 36) }
	'continue'     { PT _ (TS _ 37) }
	'do'           { PT _ (TS _ 38) }
	'else'         { PT _ (TS _ 39) }
	'false'        { PT _ (TS _ 40) }
	'for'          { PT _ (TS _ 41) }
	'if'           { PT _ (TS _ 42) }
	'in'           { PT _ (TS _ 43) }
	'inout'        { PT _ (TS _ 44) }
	'int'          { PT _ (TS _ 45) }
	'out'          { PT _ (TS _ 46) }
	'param'        { PT _ (TS _ 47) }
	'proc'         { PT _ (TS _ 48) }
	'readChar'     { PT _ (TS _ 49) }
	'readFloat'    { PT _ (TS _ 50) }
	'readInt'      { PT _ (TS _ 51) }
	'readString'   { PT _ (TS _ 52) }
	'real'         { PT _ (TS _ 53) }
	'ref'          { PT _ (TS _ 54) }
	'return'       { PT _ (TS _ 55) }
	'string'       { PT _ (TS _ 56) }
	'then'         { PT _ (TS _ 57) }
	'true'         { PT _ (TS _ 58) }
	'var'          { PT _ (TS _ 59) }
	'void'         { PT _ (TS _ 60) }
	'while'        { PT _ (TS _ 61) }
	'writeChar'    { PT _ (TS _ 62) }
	'writeFloat'   { PT _ (TS _ 63) }
	'writeInt'     { PT _ (TS _ 64) }
	'writeString'  { PT _ (TS _ 65) }
	'{'            { PT _ (TS _ 66) }
	'||'           { PT _ (TS _ 67) }
	'}'            { PT _ (TS _ 68) }
	L_ident        { PT _ (TV $$) }
	L_charac       { PT _ (TC $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Char            rule  2
	Integer         rule  3
	Double          rule  4
	String          rule  5
	Program         rule  6
	Decl            rules 7, 8, 9
	Form            rule  10
	Intent          rules 11, 12, 13, 14, 15, 16, 17
	VDecl           rules 18, 19
	CDecl           rule  20
	Type            rule  21
	Compound        rules 22, 23, 24
	Basic           rules 25, 26, 27, 28, 29, 30
	Block           rules 31, 32, 33, 34
	Stm             rules 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59
	Range           rule  60
	LExp            rules 61, 62, 63, 64
	RExp            rules 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88
	PRead           rules 89, 90, 91, 92
	PWrite          rules 93, 94, 95, 96
	Literal         rules 97, 98, 99, 100, 101, 102
	ListForm        rules 103, 104, 105
	ListDecl        rules 106, 107
	ListVDecl       rules 108, 109
	ListCDecl       rules 110, 111
	ListStm         rules 112, 113
	ListRExp        rules 114, 115, 116

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'param'        shift, and enter state 6
	'proc'         shift, and enter state 7
	'var'          shift, and enter state 8

	Program        goto state 3
	Decl           goto state 4
	ListDecl       goto state 5

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'%='           reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'*='           reduce using rule 1
	'+'            reduce using rule 1
	'+='           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'-='           reduce using rule 1
	'..'           reduce using rule 1
	'/'            reduce using rule 1
	'/='           reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'^'            reduce using rule 1
	'^='           reduce using rule 1
	'do'           reduce using rule 1
	'in'           reduce using rule 1
	'then'         reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListDecl -> Decl .                                  (rule 106)
	ListDecl -> Decl . ListDecl                         (rule 107)

	'('            reduce using rule 106
	'*'            reduce using rule 106
	';'            reduce using rule 106
	'break'        reduce using rule 106
	'continue'     reduce using rule 106
	'do'           reduce using rule 106
	'for'          reduce using rule 106
	'if'           reduce using rule 106
	'param'        shift, and enter state 6
	'proc'         shift, and enter state 7
	'return'       reduce using rule 106
	'var'          shift, and enter state 8
	'while'        reduce using rule 106
	'writeChar'    reduce using rule 106
	'writeFloat'   reduce using rule 106
	'writeInt'     reduce using rule 106
	'writeString'  reduce using rule 106
	'{'            reduce using rule 106
	'}'            reduce using rule 106
	L_ident        reduce using rule 106
	%eof           reduce using rule 106

	Decl           goto state 4
	ListDecl       goto state 16

State 5

	Program -> ListDecl .                               (rule 6)

	%eof           reduce using rule 6


State 6

	Decl -> 'param' . ListCDecl ';'                     (rule 9)

	L_ident        shift, and enter state 2

	Ident          goto state 13
	CDecl          goto state 14
	ListCDecl      goto state 15

State 7

	Decl -> 'proc' . Ident '(' ListForm ')' Intent ':' Type Block    (rule 7)

	L_ident        shift, and enter state 2

	Ident          goto state 12

State 8

	Decl -> 'var' . ListVDecl ';'                       (rule 8)

	L_ident        shift, and enter state 2

	Ident          goto state 9
	VDecl          goto state 10
	ListVDecl      goto state 11

State 9

	VDecl -> Ident . ':' Type                           (rule 18)
	VDecl -> Ident . ':' Type '=' RExp                  (rule 19)

	':'            shift, and enter state 23


State 10

	ListVDecl -> VDecl .                                (rule 108)
	ListVDecl -> VDecl . ',' ListVDecl                  (rule 109)

	','            shift, and enter state 22
	';'            reduce using rule 108


State 11

	Decl -> 'var' ListVDecl . ';'                       (rule 8)

	';'            shift, and enter state 21


State 12

	Decl -> 'proc' Ident . '(' ListForm ')' Intent ':' Type Block    (rule 7)

	'('            shift, and enter state 20


State 13

	CDecl -> Ident . ':' Type '=' RExp                  (rule 20)

	':'            shift, and enter state 19


State 14

	ListCDecl -> CDecl .                                (rule 110)
	ListCDecl -> CDecl . ',' ListCDecl                  (rule 111)

	','            shift, and enter state 18
	';'            reduce using rule 110


State 15

	Decl -> 'param' ListCDecl . ';'                     (rule 9)

	';'            shift, and enter state 17


State 16

	ListDecl -> Decl ListDecl .                         (rule 107)

	'('            reduce using rule 107
	'*'            reduce using rule 107
	';'            reduce using rule 107
	'break'        reduce using rule 107
	'continue'     reduce using rule 107
	'do'           reduce using rule 107
	'for'          reduce using rule 107
	'if'           reduce using rule 107
	'return'       reduce using rule 107
	'while'        reduce using rule 107
	'writeChar'    reduce using rule 107
	'writeFloat'   reduce using rule 107
	'writeInt'     reduce using rule 107
	'writeString'  reduce using rule 107
	'{'            reduce using rule 107
	'}'            reduce using rule 107
	L_ident        reduce using rule 107
	%eof           reduce using rule 107


State 17

	Decl -> 'param' ListCDecl ';' .                     (rule 9)

	'('            reduce using rule 9
	'*'            reduce using rule 9
	';'            reduce using rule 9
	'break'        reduce using rule 9
	'continue'     reduce using rule 9
	'do'           reduce using rule 9
	'for'          reduce using rule 9
	'if'           reduce using rule 9
	'param'        reduce using rule 9
	'proc'         reduce using rule 9
	'return'       reduce using rule 9
	'var'          reduce using rule 9
	'while'        reduce using rule 9
	'writeChar'    reduce using rule 9
	'writeFloat'   reduce using rule 9
	'writeInt'     reduce using rule 9
	'writeString'  reduce using rule 9
	'{'            reduce using rule 9
	'}'            reduce using rule 9
	L_ident        reduce using rule 9
	%eof           reduce using rule 9


State 18

	ListCDecl -> CDecl ',' . ListCDecl                  (rule 111)

	L_ident        shift, and enter state 2

	Ident          goto state 13
	CDecl          goto state 14
	ListCDecl      goto state 36

State 19

	CDecl -> Ident ':' . Type '=' RExp                  (rule 20)

	'*'            reduce using rule 22
	'['            reduce using rule 22
	'bool'         reduce using rule 22
	'char'         reduce using rule 22
	'int'          reduce using rule 22
	'real'         reduce using rule 22
	'string'       reduce using rule 22
	'void'         reduce using rule 22

	Type           goto state 35
	Compound       goto state 25

State 20

	Decl -> 'proc' Ident '(' . ListForm ')' Intent ':' Type Block    (rule 7)

	')'            reduce using rule 103
	'const'        shift, and enter state 30
	'in'           shift, and enter state 31
	'inout'        shift, and enter state 32
	'out'          shift, and enter state 33
	'ref'          shift, and enter state 34
	L_ident        reduce using rule 11

	Form           goto state 27
	Intent         goto state 28
	ListForm       goto state 29

State 21

	Decl -> 'var' ListVDecl ';' .                       (rule 8)

	'('            reduce using rule 8
	'*'            reduce using rule 8
	';'            reduce using rule 8
	'break'        reduce using rule 8
	'continue'     reduce using rule 8
	'do'           reduce using rule 8
	'for'          reduce using rule 8
	'if'           reduce using rule 8
	'param'        reduce using rule 8
	'proc'         reduce using rule 8
	'return'       reduce using rule 8
	'var'          reduce using rule 8
	'while'        reduce using rule 8
	'writeChar'    reduce using rule 8
	'writeFloat'   reduce using rule 8
	'writeInt'     reduce using rule 8
	'writeString'  reduce using rule 8
	'{'            reduce using rule 8
	'}'            reduce using rule 8
	L_ident        reduce using rule 8
	%eof           reduce using rule 8


State 22

	ListVDecl -> VDecl ',' . ListVDecl                  (rule 109)

	L_ident        shift, and enter state 2

	Ident          goto state 9
	VDecl          goto state 10
	ListVDecl      goto state 26

State 23
